# legendary-funicular

./: LICENSE  README.md  main.py  pyproject.toml
resources/: paralepiped_profile_1.ply  paralepiped_profile_2.ply
src/data/: VertexData.py
src/processing/: Rdp.py  Rotation.py  Transform.py  Translation.py  __init__.py
src/visualization/: MatplotlibPlotter.py  Open3dPlotter.py  Plotter.py  __init__.py
