[tool.poetry]
name = "legendary-funicular"
version = "0.1.0"
description = ""
authors = ["EveryoneHATEme <peppathepiginrussia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdp = "^0.8"
plyfile = "^1.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
